# ChampIQ

./: ChampIQ_Canvas_Claude_Code_Prompt.md  ChampIQ_Canvas_Frontend_PRD.docx  ChampIQ_Canvas_Frontend_PRD.md  ChampIQ_Canvas_Phase2_Handoff.md
champiq-canvas/apps/api/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  main.py  package.json  pyproject.toml
champiq-canvas/apps/api/alembic/: env.py
champiq-canvas/apps/api/alembic/versions/: 0001_canvas_state.py  0002_orchestrator.py
champiq-canvas/apps/api/champiq_api/: cli_shim.py  container.py  database.py  jobs.py  main.py  models.py
champiq-canvas/apps/api/champiq_api/champgraph/: service.py
champiq-canvas/apps/api/champiq_api/champmail/: models.py  schemas.py
champiq-canvas/apps/api/champiq_api/core/: __init__.py  interfaces.py
champiq-canvas/apps/api/champiq_api/credentials/: __init__.py  service.py
champiq-canvas/apps/api/champiq_api/drivers/: __init__.py  base.py  champgraph.py  champmail.py  champvoice.py  lakeb2b.py
champiq-canvas/apps/api/champiq_api/expressions/: __init__.py  engine.py
champiq-canvas/apps/api/champiq_api/llm/: __init__.py  base.py  openrouter.py
champiq-canvas/apps/api/champiq_api/nodes/: __init__.py  champmail_reply.py  code.py  control.py  flow.py  http.py  llm.py  split.py  triggers.py
champiq-canvas/apps/api/champiq_api/routers/: auth_lakeb2b.py  canvas.py  chat.py  credentials.py  events_ws.py  jobs.py  registry.py  tools.py  uploads.py  webhooks.py  workflows.py
champiq-canvas/apps/api/champiq_api/runtime/: __init__.py  bus.py  orchestrator.py  queue.py  (+1 more)
(+138 files in other folders)
