[project]
name = "champiq-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "jsonschema>=4.26.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.44.0",
    "cryptography>=43.0.0",
    "simpleeval>=1.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.4",
    "websockets>=13.0",
]
